chore(docker): update Docker Compose configurations
- Update service configurations for development and production
- Improve container orchestration settings
- Optimize volume mappings

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,7 +54,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: other/Dockerfile.dev
     container_name: shopping-cart-frontend-dev
     restart: unless-stopped
     ports:
